argocd/argocd-ts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
      - argocd.cheetoh-gila.ts.net
  rules:
    - host: argocd.cheetoh-gila.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
